Fix radio box dark mode

--- a/ui/app/styles/components/box-radio.scss
+++ b/ui/app/styles/components/box-radio.scss
@@ -1,12 +1,15 @@
 .box-radio-container {
   display: flex;
   flex-wrap: wrap;
+  justify-content: stretch;
 }
 .box-radio-spacing {
-  margin: $size-6 $size-3 $size-6 0;
+  padding: $spacing-s $spacing-xs $spacing-s $spacing-xs;
+  display: flex;
+  height: 100%;
 }
 .box-radio-base {
-  padding: $spacing-xs $spacing-s $spacing-s;
+  padding: 0 $spacing-s $spacing-s;
   width: 100%;
   background: $ui-gray-700;
   border-radius: 0 0 $radius $radius;
@@ -19,7 +22,7 @@
   box-sizing: border-box;
   flex-basis: 7rem;
   width: 7rem;
-  min-height: 7.5rem;
+  min-height: 6.5rem;
   padding: $size-10 0 0 0;
   flex-direction: column;
   justify-content: space-between;
@@ -37,7 +40,6 @@
   will-change: box-shadow;
   @media (prefers-color-scheme: dark) {
     background-color: $ui-gray-200;
-    // background-image: linear-gradient(to bottom, $ui-gray-500, $ui-gray-800);
     color: $ui-gray-800;
     .has-text-grey-light {
       color: $ui-gray-800 !important;
@@ -84,9 +86,6 @@
     }
   }
   input[type='radio'].radio:focus + .box-radio-base label {
-    // box-shadow: 0 0 10px 1px rgba($blue, 0.4), inset 0 0 0 0.15rem $white;
-    @media (prefers-color-scheme: dark) {
-      // box-shadow: 0 0 10px 1px rgba($vault-yellow, 0.4), inset 0 0 0 0.15rem $red;
-    }
+    box-shadow: 0 0 10px 1px rgba($blue, 0.4), inset 0 0 0 0.15rem $white;
   }
 }
